Fixing H2 on mobile

--- a/public/master.css
+++ b/public/master.css
@@ -705,6 +705,9 @@ a .round i {
     text-align: left;
     padding: 0;
   }
+  h2 {
+    padding: 0, 20px, 0, 20px;
+  }
   h3 {
     padding-bottom: 15px;
   }
